k8s-manifests/traefik/traefik-resource-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ks-traefik
  namespace: kubesimplify-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: argo-ks.654537853.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server.argocd.svc.cluster.local  # Fully qualified service name since argocd-server is in argocd ns
            port:
              number: 80
  tls:
  - hosts:
    - argo-ks.654537853.xyz
    secretName: argo-kubesimplify-com-tls
