k8s-manifests/traefik/traefik-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ks-traefik
  namespace: kubesimplify-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: go-ks.654537853.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 8088
  tls:
  - hosts:
    - go-ks.654537853.xyz
    secretName: letsencrypt-prod
